<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="HardcodedText">

    <item
        android:id="@+id/nav_transaction"
       android:icon="@drawable/ic_transactionhistory"
        android:title="@string/TranHistory" />
    <item
        android:id="@+id/nav_userprofile"
        android:icon="@drawable/ic_userprofile"
        android:title="@string/userProfile" />
    <item
        android:id="@+id/nav_FAQ"
        android:icon="@drawable/ic_faq"
        android:title="@string/FAQ" />
   <!-- <item
        android:visible="false"
        android:id="@+id/nav_setting"
        android:icon="@drawable/ic_setting"
        android:title="Settings" />-->
    <item
        android:id="@+id/passwordChange"
        android:icon="@drawable/password_ic"
        android:title="@string/changePassword"/>
    <item
        android:id="@+id/screenLock"
        android:icon="@drawable/screen_lock_ic"
        android:title="@string/screenLock" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/Logout" />

</menu>
